--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,5 +9,8 @@
         {% endif %}
         <h1><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
         <p>{{ post.text|linebreaks }}</p>
+        {% if user.is_authenticated %}
+            <a class="btn btn-default" href="{% url "post_edit" pk=post.pk %}">Edit</a>
+        {% endif %}
     </div>
 {% endblock content %}
