--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,7 +6,11 @@
             <div class="date">
                 <p>Pubbblicato: {{ post.published_date }}</p>
             </div>
-            <h1><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
+            <h1>
+                <a href="{% url "post_detail" pk=post.pk %}">
+                    {{ post.title }}
+                </a>
+            </h1>
             <p>{{ post.text|linebreaks }}</p>
         </div>
     {% endfor %}
