--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,24 +1,24 @@
-.page-header{
-    background-color: #303B61;
-    padding: 25px 50px;
-    margin-top: 0px;
+.page-header {
+    background-color: #1D7194;
+    margin-top: 0;
+    padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #18A7AB;
     font-size: 36pt;
+    text-decoration: none;
 }
 
 .content {
     margin-left: 40px;
 }
 
-h1, h2, h3, h4{
-    font-family: 'Droid Serif', serif;
-    font-weight: bold;
+h1, h2, h3, h4 {
+    font-family: 'Lobster', cursive;
 }
+
 .date {
-    float: right;
     color: #828282;
 }
 
@@ -42,9 +42,5 @@ h1, h2, h3, h4{
 }
 
 .post h1 a, .post h1 a:visited {
-    color: #000000;
-    font-size: 24px;
-}
-body {
-    font-family: 'Alegreya Sans', sans-serif;
+    color: #18A7AB;
 }
